2003-07-31  Jens Tkotz <jens@peino.de> 1.3.5-cvs-b73

	* fixed a bug in language detection introduced in b72

	* tweak navigation for languages showed rtl

2003-07-31  Jens Tkotz <jens@peino.de> 1.3.5-cvs-b72

	* continued tidy up. there should be no errormsg in config wizard when error_reporting(E_ALL);

	* bash script updates in po
	
	* bugfixes in de_DE

	* browser language is now suggested as default language

	* tidy up language detection

2003-07-31  Joan McGalliard <gallery@joanhenge.plus.com> 1.3.5-cvs-b71

	* removed $_GET & $_SERVER

2003-07-31  Joan McGalliard <gallery@joanhenge.plus.com> 1.3.5-cvs-b70

	* Begin great tidy up.  Step 1: No more notices during setup!

	* fixed some spelling errors (ie bugs) etc revealed when
	  notices displayed.

	* tweak function_exists('array_map') one more time

	* Removed >= 4.0.6 function array_filter, and wrapped _GET in isset

2003-07-30 Jens Tkotz <jens@peino.de> 1.3.5-cvs-b59

	* massive update of de_DE

	* some minor tweaks

	* updated po/README

2003-07-30  Andrew Lindeman <joyoflinux@yahoo.com> 1.3.5-cvs-b68

	* Quote argument to function_exists

2003-07-30  Joan McGalliard <gallery@joanhenge.plus.com> 1.3.5-cvs-b67

	* don't call array_map if it doesn't exist

2003-07-30  Joan McGalliard <gallery@joanhenge.plus.com> 1.3.5-cvs-b66

	* should be able to change language in view_photo.php now

2003-07-30  Joan McGalliard <gallery@joanhenge.plus.com> 1.3.5-cvs-b65

	* Make "Gallery" a literal string where it is the product name.

	* re-jig of ml_pulldown, so it doesn't rely on request_uri

2003-07-30  Joan McGalliard <gallery@joanhenge.plus.com> 1.3.5-cvs-b64

	* default language now browser language before configuration

2003-07-30  Joan McGalliard <gallery@joanhenge.plus.com> 1.3.5-cvs-b63

	* bug fix with ML code and Magic quotes.

2003-07-30  Joan McGalliard <gallery@joanhenge.plus.com> 1.3.5-cvs-b62

	* bug fix in configuration wizard invocation
