@@ -1,3 +1,6 @@
+2003-07-31  Jens Tkotz <jens@peino.de> 1.3.5-cvs-b74
+	* Changed no_NO (Norsk) to correct nb_NO (Norsk bokmal)
+
 2003-07-31  Jens Tkotz <jens@peino.de> 1.3.5-cvs-b73
 
 	* fixed a bug in language detection introduced in b72
